side manu basic

--- a/src/index.html
+++ b/src/index.html
@@ -1,118 +1,179 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CPS — Услуги и сервисы</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CPS — Услуги и сервисы</title>
-</head>
+  <body>
+    <header class="header">
+      <div class="header__container">
+        <div class="header__left">
+          <button class="header__menu-btn">
+            <img src="icons/burger.png" alt="Меню" />
+          </button>
 
-<body>
-  <header class="header">
-    <div class="header__container">
-      <div class="header__left">
-        <button class="header__menu-btn">
-          <img src="icons/burger.png" alt="Меню" />
-        </button>
-      
+          <div class="header__separator header__separator--before-logo"></div>
 
-        <div class="header__separator header__separator--before-logo">
+          <img src="icons/Group.png" alt="CPS logo" class="header__logo" />
+
+          <div class="header__separator header__separator--after-logo"></div>
         </div>
+        <div class="header__icons">
+          <!-- Mobile (<767px) -->
+          <div class="header__icons--mobile-only">
+            <button class="header__icon-btn">
+              <img src="icons/repair.png" alt="Оставить заявку" />
+            </button>
+            <button class="header__icon-btn">
+              <img src="icons/checkstatus.png" alt="Статус ремонта" />
+            </button>
+          </div>
 
-        <img src="icons/Group.png" alt="CPS logo" class="header__logo" />
+          <!-- Tablets (768px–1119px) -->
+          <div class="header__icons--tablet-only">
+            <button class="header__icon-btn">
+              <img src="icons//call.png" alt="Позвонить" />
+            </button>
+            <button class="header__icon-btn">
+              <img src="icons/chat.png" alt="Чат" />
+            </button>
+            <button class="header__icon-btn">
+              <img src="icons/profile.png" alt="Профиль" />
+            </button>
+            <div
+              class="header__separator header__separator--after-profile"
+            ></div>
+            <button class="header__icon-btn">
+              <img src="icons/repair.png" alt="Оставить заявку" />
+            </button>
+            <button class="header__icon-btn">
+              <img src="icons/checkstatus.png" alt="Статус ремонта" />
+            </button>
+          </div>
 
-        <div class="header__separator header__separator--after-logo">
+          <!-- Desktop (>=1120px) -->
+          <div class="header__icons--desktop-only">
+            <button class="header__icon-btn">
+              <span class="header__icon-text">Оставить заявку</span>
+              <img src="icons/repair.png" alt="Оставить заявку" />
+            </button>
+            <button class="header__icon-btn">
+              <span class="header__icon-text">Статус ремонта</span>
+              <img src="icons/checkstatus.png" alt="Статус ремонта" />
+            </button>
+          </div>
         </div>
       </div>
-      <div class="header__icons">
-
-        <!-- Mobile (<767px) -->
-        <div class="header__icons--mobile-only">
-          <button class="header__icon-btn">
-            <img src="icons/repair.png" alt="Оставить заявку" />
-          </button>
-          <button class="header__icon-btn">
-            <img src="icons/checkstatus.png" alt="Статус ремонта" />
-          </button>
+    </header>
+    <div class="layout">
+<!-- Side menu -->
+<aside class="menu menu--hidden">
+      <div class="menu__header">
+        <button class="menu__icon menu__icon--close">
+          <img src="icons/close.png" alt="Закрыть" />
+        </button>
+        <div class="menu__logo">
+          <img
+            src="icons/Group.png"
+            alt="CPS logo"
+            class="menu__logo"
+          />
         </div>
+        <button class="menu__icon menu__icon--search">
+          <img src="icons/search.png" alt="Поиск" />
+        </button>
+      </div>
 
-        <!-- Tablets (768px–1119px) -->
-        <div class="header__icons--tablet-only">
-          <button class="header__icon-btn">
-            <img src="icons//call.png" alt="Позвонить" />
+      <nav class="menu__nav">
+        <div class="menu__list">
+          <button class="menu__item menu__item--active">Ремонт техники</button>
+          <button class="menu__item">Услуги и сервисы</button>
+          <button class="menu__item">Корпоративным клиентам</button>
+          <button class="menu__item">Продавцам техники</button>
+          <button class="menu__item">Партнерам</button>
+          <button class="menu__item">Производителям</button>
+          <button class="menu__item">Наши сервисные центры</button>
+          <button class="menu__item">Контакты</button>
+        </div>
+      </nav>
+
+      <div class="menu__footer">
+        <div class="menu__actions">
+          <button class="menu__action">
+            <img src="icons/call.png" alt="Позвонить" />
           </button>
-          <button class="header__icon-btn">
+          <button class="menu__action">
             <img src="icons/chat.png" alt="Чат" />
           </button>
-          <button class="header__icon-btn">
+          <button class="menu__action">
             <img src="icons/profile.png" alt="Профиль" />
           </button>
-          <div class="header__separator header__separator--after-profile">
-          </div>
-          <button class="header__icon-btn">
-            <img src="icons/repair.png" alt="Оставить заявку" />
-          </button>
-          <button class="header__icon-btn">
-            <img src="icons/checkstatus.png" alt="Статус ремонта" />
-          </button>
         </div>
-
-        <!-- Desktop (>=1120px) -->
-        <div class="header__icons--desktop-only">
-          <button class="header__icon-btn">
-            <span class="header__icon-text">Оставить заявку</span>
-            <img src="icons/repair.png" alt="Оставить заявку" />
-          </button>
-          <button class="header__icon-btn">
-            <span class="header__icon-text">Статус ремонта</span>
-            <img src="icons/checkstatus.png" alt="Статус ремонта" />
-          </button>
+        <a href="mailto:mail@cps.com" class="menu__email">mail@cps.com</a>
+        <div class="menu__phone">8 800 890 8900</div>
+        <div class="menu__lang">
+          <span class="menu__lang-item menu__lang-item--active">RU</span>
+          <span class="menu__lang-item">EN</span>
+          <span class="menu__lang-item">CH</span>
         </div>
       </div>
+    </aside>
+
+    <main class="services">
+      <h1 class="services__title">Услуги и сервисы</h1>
+
+      <nav class="services__menu menu-scroll">
+        <button class="menu-scroll__item menu-scroll__item--active">
+          Ремонтируемые устройства
+        </button>
+        <button class="menu-scroll__item">Дополнительные услуги</button>
+        <button class="menu-scroll__item">Цены на услуги</button>
+        <button class="menu-scroll__item">Адреса сервисных центров</button>
+        <button class="menu-scroll__item">Специальные цены</button>
+        <button class="menu-scroll__item">Отзывы</button>
+      </nav>
+
+      <section class="services__content">
+        <section class="services__desc">
+          <p class="services__text">
+            <span class="text--mobile">
+              Мы являемся авторизованным сервисным центром по ремонту техники
+              Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с
+              официальной гарантией производителя.
+              <br /><br />
+            </span>
+            <span class="text--tablet">
+              Мы успешно работаем с 1992 года и заслужили репутацию надежного
+              партнёра.
+            </span>
+            <span class="text--desktop">
+              Что подтверждает большое количество постоянных клиентов. Мы
+              гордимся тем, что к нам обращаются по рекомендациям и, в свою
+              очередь, советуют нас родным и близким.
+            </span>
+          </p>
+
+          <a href="#" class="services__link">
+            <img
+              src="icons/expand.png"
+              alt="Читать далее"
+              class="services__link-icon"
+            />
+            Читать далее
+          </a>
+        </section>
+
+        <section class="services__image-block">
+          <img
+            src="images/banner.png"
+            alt="Табличка CPS"
+            class="services__image"
+          />
+        </section>
+      </section>
+    </main>
     </div>
-  </header>
-
-  <main class="services">
-    <h1 class="services__title">Услуги и сервисы</h1>
-
-    <nav class="services__menu menu-scroll">
-      <button class="menu-scroll__item menu-scroll__item--active">Ремонтируемые устройства</button>
-      <button class="menu-scroll__item">Дополнительные услуги</button>
-      <button class="menu-scroll__item">Цены на услуги</button>
-      <button class="menu-scroll__item">Адреса сервисных центров</button>
-      <button class="menu-scroll__item">Специальные цены</button>
-      <button class="menu-scroll__item">Отзывы</button>
-    </nav>
-
-    <section class="services__content">
-      <section class="services__desc">
-        <p class="services__text">
-
-          <span class="text--mobile">
-            Мы являемся авторизованным сервисным центром по ремонту техники Dell.
-            Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
-            <br><br>
-          </span>
-          <span class="text--tablet">
-            Мы успешно работаем с 1992 года и заслужили репутацию надежного партнёра.
-          </span>
-          <span class="text--desktop">
-            Что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по
-            рекомендациям и, в свою очередь, советуют нас родным и близким.
-          </span>
-        </p>
-
-        <a href="#" class="services__link">
-          <img src="icons/expand.png" alt="Читать далее" class="services__link-icon" /> Читать далее
-        </a>
-
-      </section>
-
-      <section class="services__image-block">
-        <img src="images/banner.png" alt="Табличка CPS" class="services__image" />
-      </section>
-    </section>
-  </main>
-</body>
-
+  </body>
 </html>
