brands and swiper added

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CPS — Услуги и сервисы</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="src/js/main.js"></script>
   </head>
 
   <body>
@@ -176,6 +179,195 @@
               class="services__image"
             />
           </section>
+        </section>
+        <!-- Ремонт техники различных брендов -->
+        <section class="services_brands">
+          <div class="services_brands__header">
+            <h2 class="services_brands__title">
+              Ремонт техники различных брендов
+            </h2>
+          </div>
+          <div class="services_brands__container">
+            <div class="services_brands__list swiper">
+              <div class="services_brands__items swiper-wrapper">
+                <div class="services_brands__item swiper-slide">
+                  <button class="services_brands__brand">
+                    <img
+                      src="icons/lenovo.png"
+                      alt="Lenovo"
+                      class="services_brands__logo"
+                    />
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_brands__arrow"
+                    />
+                  </button>
+                </div>
+                <div class="services_brands__item swiper-slide">
+                  <button class="services_brands__brand">
+                    <img
+                      src="icons/samsung.png"
+                      alt="Samsung"
+                      class="services_brands__logo"
+                    />
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_brands__arrow"
+                    />
+                  </button>
+                </div>
+                <div class="services_brands__item swiper-slide">
+                  <button class="services_brands__brand">
+                    <img
+                      src="icons/apple.png"
+                      alt="Apple"
+                      class="services_brands__logo"
+                    />
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_brands__arrow"
+                    />
+                  </button>
+                </div>
+                <div class="services_brands__item swiper-slide">
+                  <button class="services_brands__brand">
+                    <img
+                      src="icons/bosch.png"
+                      alt="Bosch"
+                      class="services_brands__logo"
+                    />
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_brands__arrow"
+                    />
+                  </button>
+                </div>
+                <div class="services_brands__item swiper-slide">
+                  <button class="services_brands__brand">
+                    <img
+                      src="icons/hp.png"
+                      alt="HP"
+                      class="services_brands__logo"
+                    />
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_brands__arrow"
+                    />
+                  </button>
+                </div>
+                <div class="services_brands__item swiper-slide">
+                  <button class="services_brands__brand">
+                    <img
+                      src="icons/acer.png"
+                      alt="Acer"
+                      class="services_brands__logo"
+                    />
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_brands__arrow"
+                    />
+                  </button>
+                </div>
+                <div class="services_brands__item swiper-slide">
+                  <button class="services_brands__brand">
+                    <img
+                      src="icons/viewSonic.png"
+                      alt="ViewSonic"
+                      class="services_brands__logo"
+                    />
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_brands__arrow"
+                    />
+                  </button>
+                </div>
+                <div class="services_brands__item swiper-slide">
+                  <button class="services_brands__brand">
+                    <img
+                      src="icons/sony.png"
+                      alt="Sony"
+                      class="services_brands__logo"
+                    />
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_brands__arrow"
+                    />
+                  </button>
+                </div>
+                <div
+                  class="services_brands__item swiper-slide services_brands__item--hidden"
+                >
+                  <button class="services_brands__brand">
+                    <img
+                      src="icons/lenovo.png"
+                      alt="Lenovo"
+                      class="services_brands__logo"
+                    />
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_brands__arrow"
+                    />
+                  </button>
+                </div>
+                <div
+                  class="services_brands__item swiper-slide services_brands__item--hidden"
+                >
+                  <button class="services_brands__brand">
+                    <img
+                      src="icons/samsung.png"
+                      alt="Samsung"
+                      class="services_brands__logo"
+                    />
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_brands__arrow"
+                    />
+                  </button>
+                </div>
+                <div
+                  class="services_brands__item swiper-slide services_brands__item--hidden"
+                >
+                  <button class="services_brands__brand">
+                    <img
+                      src="icons/apple.png"
+                      alt="Apple"
+                      class="services_brands__logo"
+                    />
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_brands__arrow"
+                    />
+                  </button>
+                </div>
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+
+            <button class="services_brands__toggle" type="button">
+              <img
+                src="icons/expand.svg"
+                alt="expand"
+                class="services_brands__icon services_brands__icon--expand"
+              />
+              <img
+                src="icons/collapse.svg"
+                alt="collapse"
+                class="services_brands__icon services_brands__icon--collapse"
+              />
+              <span class="services_brands__toggle-text">Показать все</span>
+            </button>
+          </div>
         </section>
       </main>
     </div>
