services types bug

--- a/src/index.html
+++ b/src/index.html
@@ -370,6 +370,65 @@
             </button>
           </div>
         </section>
+        <!-- Ремонт различных видов техники -->
+        <section class="services_types">
+          <div class="services_types__header">
+            <h2 class="services_types__title">
+              Ремонт различных видов техники
+            </h2>
+          </div>
+          <div class="services_types__container">
+            <div class="services_types__list swiper">
+              <div class="services_types__items swiper-wrapper">
+                <div class="services_types__item swiper-slide">
+                  <button class="services_types__item">
+                   Ремонт ноутбуков
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_types__arrow"
+                    />
+                  </button>
+                <button class="services_types__item">
+                   Ремонт планшетов
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_types__arrow"
+                    />
+                  </button><button class="services_types__item">
+                   Ремонт ПК
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_types__arrow"
+                    />
+                  </button><button class="services_types__item">
+                   Ремонт мониторов
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_types__arrow"
+                    />
+                  </button>
+              <div class="swiper-pagination"></div>
+            </div>
+
+            <button class="services_types__toggle" type="button">
+              <img
+                src="icons/expand.svg"
+                alt="expand"
+                class="services_types__icon services_types__icon--expand"
+              />
+              <img
+                src="icons/collapse.svg"
+                alt="collapse"
+                class="services_types__icon services_types__icon--collapse"
+              />
+              <span class="services_types__toggle-text">Показать все</span>
+            </button>
+          </div>
+        </section>
       </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
