services types fix

--- a/src/index.html
+++ b/src/index.html
@@ -382,35 +382,45 @@
               <div class="services_types__items swiper-wrapper">
                 <div class="services_types__item swiper-slide">
                   <button class="services_types__item">
-                   Ремонт ноутбуков
+                    <span class="services_types__text">Ремонт ноутбуков</span>
                     <img
                       src="icons/arrow.svg"
                       alt=""
                       class="services_types__arrow"
                     />
                   </button>
-                <button class="services_types__item">
-                   Ремонт планшетов
-                    <img
-                      src="icons/arrow.svg"
-                      alt=""
-                      class="services_types__arrow"
-                    />
-                  </button><button class="services_types__item">
-                   Ремонт ПК
-                    <img
-                      src="icons/arrow.svg"
-                      alt=""
-                      class="services_types__arrow"
-                    />
-                  </button><button class="services_types__item">
-                   Ремонт мониторов
+                </div>
+                <div class="services_types__item swiper-slide">
+                  <button class="services_types__item">
+                    <span class="services_types__text">Ремонт планшетов</span>
                     <img
                       src="icons/arrow.svg"
                       alt=""
                       class="services_types__arrow"
                     />
                   </button>
+                </div>
+                <div class="services_types__item swiper-slide">
+                  <button class="services_types__item">
+                    <span class="services_types__text">Ремонт ПК</span>
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_types__arrow"
+                    />
+                  </button>
+                </div>
+                <div class="services_types__item swiper-slide">
+                  <button class="services_types__item">
+                    <span class="services_types__text">Ремонт мониторов</span>
+                    <img
+                      src="icons/arrow.svg"
+                      alt=""
+                      class="services_types__arrow"
+                    />
+                  </button>
+                </div>
+              </div>
               <div class="swiper-pagination"></div>
             </div>
 
