--- a/src/index.html
+++ b/src/index.html
@@ -442,6 +442,6 @@
       </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./js/index.js"></script>
+    <!-- <script src="./js/index.js"></script> -->
   </body>
 </html>
