servies proces added

--- a/src/index.html
+++ b/src/index.html
@@ -439,9 +439,83 @@
             </button>
           </div>
         </section>
+        <!-- ЦЕНЫ НА УСЛУГИ -->
+         
+<section class="services_prices">
+  <div class="services_prices__header">
+    <h2 class="services_prices__title">ЦЕНЫ НА УСЛУГИ</h2>
+  </div>
+  <div class="services_prices__container">
+    <div class="services_prices__list swiper">
+      <div class="services_prices__headers">
+        <div class="services_prices__header-cell">Ремонтные услуги</div>
+        <div class="services_prices__header-cell">Цена</div>
+        <div class="services_prices__header-cell">Срок</div>
+        <div class="services_prices__header-cell"></div> <!-- Пустая ячейка для кнопки -->
+      </div>
+      <div class="services_prices__items swiper-wrapper">
+        <div class="services_prices__item swiper-slide">
+          <div class="services_prices__row">
+            <div class="services_prices__cell services_prices__cell--service">Диагностика</div>
+            <div class="services_prices__cell services_prices__cell--price">Бесплатно</div>
+            <div class="services_prices__cell services_prices__cell--term">30 мин</div>
+            <button class="services_prices__order">
+              Заказать
+              <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
+            </button>
+          </div>
+        </div>
+        <div class="services_prices__item swiper-slide">
+          <div class="services_prices__row">
+            <div class="services_prices__cell services_prices__cell--service">Замена дисплея</div>
+            <div class="services_prices__cell services_prices__cell--price">1 000 ₽</div>
+            <div class="services_prices__cell services_prices__cell--term">30-120 мин</div>
+            <button class="services_prices__order">
+              Заказать
+              <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
+            </button>
+          </div>
+        </div>
+        <div class="services_prices__item swiper-slide">
+          <div class="services_prices__row">
+            <div class="services_prices__cell services_prices__cell--service">Замена полифонического динамика</div>
+            <div class="services_prices__cell services_prices__cell--price">1 000 ₽</div>
+            <div class="services_prices__cell services_prices__cell--term">30-120 мин</div>
+            <button class="services_prices__order">
+              Заказать
+              <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
+            </button>
+          </div>
+        </div>
+        <div class="services_prices__item swiper-slide">
+          <div class="services_prices__row">
+            <div class="services_prices__cell services_prices__cell--service">Тестирование с выдачей технического заключения</div>
+            <div class="services_prices__cell services_prices__cell--price">1 000 ₽</div>
+            <div class="services_prices__cell services_prices__cell--term">30-120 мин</div>
+            <button class="services_prices__order">
+              Заказать
+              <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
+            </button>
+          </div>
+        </div>
+        <div class="services_prices__item swiper-slide">
+          <div class="services_prices__row">
+            <div class="services_prices__cell services_prices__cell--service">Замена программного обеспечения</div>
+            <div class="services_prices__cell services_prices__cell--price">1 000 ₽</div>
+            <div class="services_prices__cell services_prices__cell--term">30-120 мин</div>
+            <button class="services_prices__order">
+              Заказать
+              <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-pagination"></div>
+    </div>
+  </div>
+</section>
       </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!-- <script src="./js/index.js"></script> -->
   </body>
 </html>
