--- a/src/index.html
+++ b/src/index.html
@@ -440,69 +440,119 @@
           </div>
         </section>
         <!-- ЦЕНЫ НА УСЛУГИ -->
-         
-<section class="services_prices">
+         <section class="services_prices">
   <div class="services_prices__header">
     <h2 class="services_prices__title">ЦЕНЫ НА УСЛУГИ</h2>
   </div>
   <div class="services_prices__container">
-    <div class="services_prices__list swiper">
-      <div class="services_prices__headers">
-        <div class="services_prices__header-cell">Ремонтные услуги</div>
-        <div class="services_prices__header-cell">Цена</div>
-        <div class="services_prices__header-cell">Срок</div>
-        <div class="services_prices__header-cell"></div> <!-- Пустая ячейка для кнопки -->
-      </div>
-      <div class="services_prices__items swiper-wrapper">
-        <div class="services_prices__item swiper-slide">
-          <div class="services_prices__row">
-            <div class="services_prices__cell services_prices__cell--service">Диагностика</div>
-            <div class="services_prices__cell services_prices__cell--price">Бесплатно</div>
-            <div class="services_prices__cell services_prices__cell--term">30 мин</div>
+    <table class="services_prices__table">
+      <thead class="services_prices__headers">
+        <tr>
+          <th class="services_prices__header-cell">Ремонтные услуги</th>
+          <th class="services_prices__header-cell">Цена</th>
+          <th class="services_prices__header-cell">Срок</th>
+          <th class="services_prices__header-cell"></th> <!-- Пустая ячейка для кнопки -->
+        </tr>
+      </thead>
+      <tbody class="services_prices__items">
+        <tr class="services_prices__row">
+          <td class="services_prices__cell services_prices__cell--service">Диагностика</td>
+          <td class="services_prices__cell services_prices__cell--price">Бесплатно</td>
+          <td class="services_prices__cell services_prices__cell--term">30 мин</td>
+          <td class="services_prices__cell"><button class="services_prices__order">
+            Заказать
+            <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
+          </button></td>
+        </tr>
+        <tr class="services_prices__row">
+          <td class="services_prices__cell services_prices__cell--service">Замена дисплея</td>
+          <td class="services_prices__cell services_prices__cell--price">1 000 ₽</td>
+          <td class="services_prices__cell services_prices__cell--term">30-120 мин</td>
+          <td class="services_prices__cell"><button class="services_prices__order">
+            Заказать
+            <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
+          </button></td>
+        </tr>
+        <tr class="services_prices__row">
+          <td class="services_prices__cell services_prices__cell--service">Замена полифонического динамика</td>
+          <td class="services_prices__cell services_prices__cell--price">1 000 ₽</td>
+          <td class="services_prices__cell services_prices__cell--term">30-120 мин</td>
+          <td class="services_prices__cell"><button class="services_prices__order">
+            Заказать
+            <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
+          </button></td>
+        </tr>
+        <tr class="services_prices__row">
+          <td class="services_prices__cell services_prices__cell--service">Тестирование с выдачей технического заключения</td>
+          <td class="services_prices__cell services_prices__cell--price">1 000 ₽</td>
+          <td class="services_prices__cell services_prices__cell--term">30-120 мин</td>
+          <td class="services_prices__cell"><button class="services_prices__order">
+            Заказать
+            <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
+          </button></td>
+        </tr>
+        <tr class="services_prices__row">
+          <td class="services_prices__cell services_prices__cell--service">Замена программного обеспечения</td>
+          <td class="services_prices__cell services_prices__cell--price">1 000 ₽</td>
+          <td class="services_prices__cell services_prices__cell--term">30-120 мин</td>
+          <td class="services_prices__cell"><button class="services_prices__order">
+            Заказать
+            <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
+          </button></td>
+        </tr>
+      </tbody>
+    </table>
+    <div class="services_prices__mobile-list swiper" style="display: none;">
+      <div class="services_prices__mobile-items swiper-wrapper">
+        <div class="services_prices__mobile-item swiper-slide">
+          <div class="services_prices__mobile-row">
+            <div class="services_prices__mobile-cell services_prices__cell--service">Диагностика</div>
+            <div class="services_prices__mobile-cell services_prices__cell--price">Бесплатно</div>
+            <div class="services_prices__mobile-cell services_prices__cell--term">30 мин</div>
             <button class="services_prices__order">
               Заказать
               <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
             </button>
           </div>
         </div>
-        <div class="services_prices__item swiper-slide">
-          <div class="services_prices__row">
-            <div class="services_prices__cell services_prices__cell--service">Замена дисплея</div>
-            <div class="services_prices__cell services_prices__cell--price">1 000 ₽</div>
-            <div class="services_prices__cell services_prices__cell--term">30-120 мин</div>
+        <div class="services_prices__mobile-item swiper-slide">
+          <div class="services_prices__mobile-row">
+            <div class="services_prices__mobile-cell services_prices__cell--service">Замена дисплея</div>
+            <div class="services_prices__mobile-cell services_prices__cell--price">1 000 ₽</div>
+            <div class="services_prices__mobile-cell services_prices__cell--term">30-120 мин</div>
             <button class="services_prices__order">
               Заказать
               <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
             </button>
           </div>
         </div>
-        <div class="services_prices__item swiper-slide">
-          <div class="services_prices__row">
-            <div class="services_prices__cell services_prices__cell--service">Замена полифонического динамика</div>
-            <div class="services_prices__cell services_prices__cell--price">1 000 ₽</div>
-            <div class="services_prices__cell services_prices__cell--term">30-120 мин</div>
+        <div class="services_prices__mobile-item swiper-slide">
+          <div class="services_prices__mobile-row">
+            <div class="services_prices__mobile-cell services_prices__cell--service">Замена полифонического динамика</div>
+            <div class="services_prices__mobile-cell services_prices__cell--price">1 000 ₽</div>
+            <div class="services_prices__mobile-cell services_prices__cell--term">30-120 мин</div>
             <button class="services_prices__order">
               Заказать
               <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
             </button>
           </div>
         </div>
-        <div class="services_prices__item swiper-slide">
-          <div class="services_prices__row">
-            <div class="services_prices__cell services_prices__cell--service">Тестирование с выдачей технического заключения</div>
-            <div class="services_prices__cell services_prices__cell--price">1 000 ₽</div>
-            <div class="services_prices__cell services_prices__cell--term">30-120 мин</div>
+        <div class="services_prices__mobile-item swiper-slide">
+          <div class="services_prices__mobile-row">
+            <div class="services_prices__mobile-cell services_prices__cell--service">Тестирование с выдачей технического заключения</div>
+            <div class="services_prices__mobile-cell services_prices__cell--price">1 000 ₽</div>
+            <div class="services_prices__mobile-cell services_prices__cell--term">30-120 мин</div>
             <button class="services_prices__order">
               Заказать
               <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
             </button>
           </div>
         </div>
-        <div class="services_prices__item swiper-slide">
-          <div class="services_prices__row">
-            <div class="services_prices__cell services_prices__cell--service">Замена программного обеспечения</div>
-            <div class="services_prices__cell services_prices__cell--price">1 000 ₽</div>
-            <div class="services_prices__cell services_prices__cell--term">30-120 мин</div>
+        <div class="services_prices__mobile-item swiper-slide">
+          <div class="services_prices__mobile-row">
+            <div class="services_prices__mobile-cell services_prices__cell--service">Замена программного обеспечения</div>
+            <div class="services_prices__mobile-cell services_prices__cell--price">1 000 ₽</div>
+            <div class="services_prices__mobile-cell services_prices__cell--term">30-120 мин</div>
             <button class="services_prices__order">
               Заказать
               <img src="icons/whiteArrow.svg" alt="Заказать" class="services_prices__order-icon" />
@@ -514,6 +564,7 @@
     </div>
   </div>
 </section>
+
       </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
