--- a/src/index.html
+++ b/src/index.html
@@ -512,26 +512,26 @@
           </div>
       </section>
       <!-- TEXT UNDER THE PRICES TABLE -->
-
       <div class="price__info">
-        <p class="price__info-text">Все цены указаны с учетом НДС. Стоимость ремонта указана</br> на единичную услугу.
-          Для получения коммерческого</br> предложения на постоянное обслуживание, оставьте заявку.</p>
+        <p class="price__info-text">
+          Все цены указаны с учетом НДС. Стоимость ремонта указана<br class="desktop-break">
+          на единичную услугу. Для получения коммерческого<br class="desktop-break">
+          предложения на постоянное обслуживание, оставьте заявку.
+        </p>
         <div class="services_prices__offer">
-    <span class="services_prices__offer-text">Получить коммерческое предложение</span>
-    <img src="icons/simpleArrow.svg" alt="Arrow" class="services_prices__offer-icon">
-  </div>
+          <span class="services_prices__offer-text">Получить коммерческое предложение</span>
+          <img src="icons/simpleArrow.svg" alt="Arrow" class="services_prices__offer-icon">
+        </div>
       </div>
-
       <!-- FOOTER -->
-    <footer class="services__footer">
-  <div class="services__footer-container">
-    <p class="services__footer-copyright">© 2019 CPS</br>Разработано командой Apesong</p>
-    <span class="services__footer-policy">Политика конфиденциальности</span>
-    <p class="services__footer-disclaimer">Информация, размещенная на данной странице,</br> не является публичной офертой</p>
-  </div>
-</footer>
-
-
+      <footer class="services__footer">
+        <div class="services__footer-container">
+          <p class="services__footer-copyright">© 2019 CPS</br>Разработано командой Apesong</p>
+          <span class="services__footer-policy">Политика конфиденциальности</span>
+          <p class="services__footer-disclaimer">Информация, размещенная на данной странице,</br> не является публичной
+            офертой</p>
+        </div>
+      </footer>
     </main>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
